--- a/.github/workflows/simple_build.yml
+++ b/.github/workflows/simple_build.yml
@@ -84,7 +84,7 @@ jobs:
     - name: Upload artifacts
       uses: actions/upload-artifact@v4
       with:
-        name: ${${{matrix.BUILD_MCU}}}
+        name: ${{matrix.BUILD_MCU}}
         compression-level: 9
         path: |
           ${{github.event.repository.name}}/*.out
